--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
+<!-- Favicon from: https://www.flaticon.com/authors/smashingstocks -->
+
 <!DOCTYPE html>
 <html>
 <body>
+<head>
+    <title>Sara Elizabeth Walker</title>
+    <link rel="icon" type="image/x-icon" href="/images/bamboo.ico">
+</head>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
