--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <head>
     <title>Sara Elizabeth Walker</title>
-    <link rel="icon" type="image/x-icon" href="/images/bamboo.ico">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
