--- a/index.html
+++ b/index.html
@@ -1,59 +1,35 @@
-<!-- Photo by Martin Vorel: https://martinvorel.com/ -->
-<html>
-    <head>
-        <title>Sara Elizabeth Walker</title>        
-        <link rel="icon" href="bamboo.png">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-    <div class="header">
-        <h1 class="title">Sara Walker</h1>
-    </div>
+﻿<!DOCTYPE html>
 
-    <div class = "row">
-        <div class="square_one column side"></div>
-        <div class="square_two column middle"> 
-            <div class="about_me">About me</div>
-            <hr>
-            <div class="description">
-            <h3>South Puget Sound Community College</h3>
-            <sub>(Associates in Applied Sciences) - 26 Credits</sub>
-            <ul>
-                <li>Intro to Statistics</li>
-                <li>Accelerated Pre-Calculus</li>
-                <li>Programming Fundamentals</li>
-                <li>Intro to Statistics</li>
-            </ul>
-            <h3>Codewars</h3>
-            <sub>7 kyu, 86 Honor</sub>
-            <ul>
-                <li>Completed 34 Katas in C# and Python</li>
-            </ul>
-            <h3>CCSBattle</h3>
-            <sub>8 Targets, 5189.65 Score</sub>
-            <h3>Unity Learn</h3>
-            <sub>58 Tutorials, 7 Projects, 4 Missions, 1 Pathway, 6 Quizzes</sub>
-            <ul>
-                <li>Beginner Application Scripting</li>
-                <li>Beginner Debugging</li>
-                <li>Beginner Code Comprehension</li>
-                <li>Beginner Job Preparation</li>
-                <li>Real-time Industry Essentials</li>
-                <li>Publishing</li>
-                <li>Project Setup & Management</li>
-            </ul>
-            <h3>SoloLearn</h3>
-            <sub>58 Tutorials, 7 Projects, 4 Missions, 1 Pathway, 6 Quizzes</sub>
-            <ul>
-                <li>Completed Python</li>
-                <li>Completed C#</li>
-                <li>Completed HTML</li>
-                <li>Completed CSS</li>
-                <li>Partial Completion JavaScript</li>
-            </ul>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
+    <title>Sara Elizabeth Walker</title>
+    <link rel="icon" href="images/bamboo.png">
+    <link rel="stylesheet" href="styles/mystyle.css">
+</head>
+<body>
+    <header>
+        <img src="images/sara-walker-logo.png" alt="Sara Walker logo" />
+    </header>
+
+    <main>
+        <div class="content">
+            <div class="top left">
+                <p><a href="nav/about_me.html">About Me</a></p>
+            </div>
+
+            <div class="top right">
+                <p><a href="nav/projects.html">Projects</a></p>
+            </div>
+
+            <div class="bottom left" id="row2">
+                <p><a href="nav/achievements.html">Achievements</a></p>
+            </div>
+
+            <div class="bottom right">
+                <p><a href="nav/photos.html">Photos</a></p>
+            </div>
         </div>
-        </div>
-        <div class="square_three column side"></div>
-    </div>
-    </body>
+    </main>
+</body>
 </html>
