--- a/nav/projects.html
+++ b/nav/projects.html
@@ -10,6 +10,6 @@
 <body>
     <h1>Projects</h1>
     <h3>This page is under construction</h3>
-    <p><a href="../index(test).html">Return to homepage</a></p>
+    <p><a href="../index.html">Return to homepage</a></p>
 </body>
 </html>
