Push it, push it real good

--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
     <header>
-        <img src="images/sara-walker-logo.png" alt="Sara Walker logo" />
+        <img id="logo" src="images/sara-walker-logo.png" alt="Sara Walker logo" />
     </header>
 
     <main>
-        <div class="content">
-            <div class="top left">
-                <p><a href="nav/about_me.html">About Me</a></p>
+        <section class="main_screen">
+            <div class="top left main_grid">
+                <p><a class="main_link" href="nav/about_me.html">About Me</a></p>
             </div>
 
-            <div class="top right">
-                <p><a href="nav/projects.html">Projects</a></p>
+            <div class="top right main_grid">
+                <p><a class="main_link"  href="nav/projects.html">Projects</a></p>
             </div>
 
-            <div class="bottom left" id="row2">
-                <p><a href="nav/achievements.html">Achievements</a></p>
+            <div class="bottom left main_grid" id="row2">
+                <p><a class="main_link"  href="nav/achievements.html">Achievements</a></p>
             </div>
 
-            <div class="bottom right">
-                <p><a href="nav/photos.html">Photos</a></p>
+            <div class="bottom right main_grid">
+                <p><a class="main_link"  href="nav/photos.html">Photos</a></p>
             </div>
-        </div>
+        </section>
     </main>
 </body>
 </html>
