--- a/nav/achievements.html
+++ b/nav/achievements.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="../styles/mystyle.css">
 </head>
 <body>
-    <h1>Acheivements</h1>
-    <h3>This page is under construction</h3>
-    <p><a href="../index.html">Return to homepage</a></p>
+    <button onclick="document.location='../index.html'">Return to homepage</button>
+    <header>
+        <img id="logo" src="../images/sara-walker-logo.png" alt="Sara Walker logo" />
+    </header>
+    <main>
+        <h2 id="title">Achievements</h2>
+        <section class="content">
+            <h3>South Puget Sound Community College</h3>
+            <ul>
+                <li>Intro to Statistics</li>
+                <li>Accelerated Pre-Calculus</li>
+                <li>Programming Fundamentals</li>
+                <li>Intro to Relational Databases</li>
+                <li>Programming Business Objects</li>
+                <li>HTML, CSS, and Javascript (Current)</li>
+                <li>SQL (Current)</li>
+
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
